@@ -2,59 +2,13 @@ Makefile
 Makefile.in
 aclocal.m4
 autom4te*.cache
-boot-conf
-boot-grub.pl
-boot-lilo.pl
-boot-yaboot.pl
-boot.pl
 config.*
 configure
-debug.pl
-dhcpd-conf
-dhcpd.pl
-disks-conf
-display-conf
-file.pl
-filesys.pl
-font-conf
-font.pl
-general.pl
-gettext.pl
-hardware-conf
-internetsharing-conf
 intltool-*
-ishare.pl
 libtool
-media.pl
-memory-conf
-mouse-conf
-network-conf
-network.pl
-package-conf
-parse.pl
-partition.pl
-platform.pl
-print-conf
-print.pl
-removable-media.pl
-replace.pl
-report.pl
-rhprinterdb2gstxml.pl
-runlevel-conf
-service-list.pl
-service.pl
-services-conf
-share.pl
-shares-conf
-system-tools-backends.pc
-time-conf
-tokenizer.pl
-users-conf
-util.pl
-x.pl
-xml.pl
-Loader.pl
+SystemToolsBackends.pl
 ltmain.sh
 *.service
 *.pc
+*.conf
 stamp-h1
