@@ -1,0 +1,29 @@
+<!DOCTYPE busconfig PUBLIC
+ "-//freedesktop//DTD D-BUS Bus Configuration 1.0//EN"
+ "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
+<busconfig>
+
+  <policy context="default">
+    <!-- just for testing purposes, only root will
+         be able to actually change configuration -->
+    <allow own="org.freedesktop.SystemToolsBackends"/>
+    <deny send_interface="org.freedesktop.SystemToolsBackends"/>
+  </policy>
+
+  <!-- This will not work if pam_console support is not enabled -->
+  <policy at_console="true">
+    <allow send_interface="org.freedesktop.SystemToolsBackends"/>
+    <allow send_destination="org.freedesktop.SystemToolsBackends"/>
+  </policy>
+
+  <policy user="0">
+    <allow send_interface="org.freedesktop.SystemToolsBackends"/>
+    <allow send_destination="org.freedesktop.SystemToolsBackends"/>
+  </policy>
+
+  <policy user="@STB_GROUP@">
+    <allow send_interface="org.freedesktop.SystemToolsBackends"/>
+    <allow send_destination="org.freedesktop.SystemToolsBackends"/>
+  </policy>
+
+</busconfig>
